[tool.poetry]
name = "aiti-guru"
version = "1.0.0"
description = "Тестовое задание"
authors = ["igornevertired"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
kafka-python = "^2.0.2"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
