[tool.poetry]
name = "aiti-guru"
version = "1.0.0"
description = "Тестовое задание"
authors = ["igornevertired"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
fastapi = "0.115.0"
uvicorn = "0.31.0"
setuptools = "75.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
